@startuml

title __GAMEFUNCTION's Class Diagram__\n

  namespace Bomber {
    namespace GameFunction {
      class Bomber.GameFunction.InGameUI {
          ~ y : int
          + InGameUI()
          + render()
          + setUp()
      }
    }
  }
  

  namespace Bomber {
    namespace GameFunction {
      class Bomber.GameFunction.Map {
          {static} + MAP_HEIGHT : int
          {static} + MAP_WIDTH : int
          {static} + TILE_TYPE_LIMIT : int
          + mapInfo : int[][]
          + mapTile : Tile[][]
          + tileId : Tile[]
          - entityList : List<Entity>
          + changeTile()
          + createNavigationMap()
          + dealDamageTile()
          + dealDamageTile()
          + destroyTile()
          + getEntityList()
          + getGame()
          + getTile()
          + isTileDestructible()
          + isTileDestructible()
          + isTileEmpty()
          + isTileEmpty()
          + loadMap()
          + loadTile()
          + mapTileArrayToList()
          + setEntityList()
          + setGame()
          + validTile()
          - spawnRandomLoot()
      }
    }
  }
  

  namespace Bomber {
    namespace GameFunction {
      class Bomber.GameFunction.MapEditor {
          ~ bombRate : double
          - enable : boolean
          - selectedTile : int
          - toX : int
          - toY : int
          + MapEditor()
          + coordinateDown()
          + setGame()
          + setMap()
          + update()
      }
    }
  }
  

  namespace Bomber {
    namespace GameFunction {
      class Bomber.GameFunction.Sound {
          {static} + ThemeSound()
          {static} + getItem()
          {static} + playSound()
      }
    }
  }
  

  namespace Bomber {
    namespace GameFunction {
      class Bomber.GameFunction.Texture {
          {static} + IMAGE_SIZE : int
          - image : Image
          - x : int
          - y : int
          + Texture()
          + getImage()
          + getX()
          + getY()
          + render()
      }
    }
  }
  

  namespace Bomber {
    namespace GameFunction {
      class Bomber.GameFunction.TimeCounter {
          - timeStarted : long
          + getTime()
          + resetCounter()
      }
    }
  }
  

  Bomber.GameFunction.InGameUI o-- Bomber.GameFunction.Texture : bar
  Bomber.GameFunction.InGameUI o-- Bomber.Game : game
  Bomber.GameFunction.InGameUI o-- Bomber.GameFunction.MapEditor : mapEditor
  Bomber.GameFunction.InGameUI o-- Bomber.Entity.Player : player
  Bomber.GameFunction.Map o-- Bomber.Game : game
  Bomber.GameFunction.MapEditor o-- Bomber.GameFunction.TimeCounter : bombCounter
  Bomber.GameFunction.MapEditor o-- Bomber.Game : game
  Bomber.GameFunction.MapEditor o-- Bomber.GameFunction.Map : map
  Bomber.GameFunction.MapEditor o-- Bomber.GameFunction.Texture : selectedTexture


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
